feat: hyperlink fields synchronisation (#177)
Refs: #174