@@ -15,9 +15,9 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 class DiffModelTest {
     private static Stream<Arguments> testValuesForCss() {
         return Stream.of(
-                Arguments.of(null, null, Collections.emptyList(), Collections.emptyList()),
-                Arguments.of("", null, Collections.emptyList(), Collections.emptyList()),
-                Arguments.of("some badly formatted string", null, Collections.emptyList(), Collections.emptyList()),
+                Arguments.of(null, null, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()),
+                Arguments.of("", null, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()),
+                Arguments.of("some badly formatted string", null, Collections.emptyList(), Collections.emptyList(), Collections.emptyList()),
                 Arguments.of(String.format("ok file" +
                                 "-----BEGIN BUNDLE TIMESTAMP-----%1$s" +
                                 "12345%1$s" +
@@ -27,8 +27,11 @@ class DiffModelTest {
                                 "-----END DIFF FIELDS-----%1$s" +
                                 "-----BEGIN STATUSES TO IGNORE-----%1$s" +
                                 "[\"inprogress\"]%1$s" +
-                                "-----END STATUSES TO IGNORE-----%1$s",
-                        System.lineSeparator()), "12345", Arrays.asList(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), Collections.singletonList("inprogress")),
+                                "-----END STATUSES TO IGNORE-----%1$s" +
+                                "-----BEGIN HYPERLINK ROLES-----%1$s" +
+                                "[\"ref_int\"]%1$s" +
+                                "-----END HYPERLINK ROLES-----%1$s",
+                        System.lineSeparator()), "12345", Arrays.asList(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), Collections.singletonList("inprogress"), Collections.singletonList("ref_int")),
                 Arguments.of(String.format("no bundle timestamp" +
                                 "-----BEGIN DIFF FIELDS-----%1$s" +
                                 "[{\"key\":\"title\",\"wiTypeId\":\"assumption\"}]" +
@@ -36,7 +39,7 @@ class DiffModelTest {
                                 "-----BEGIN STATUSES TO IGNORE-----%1$s" +
                                 "[\"draft\",\"open\"]%1$s" +
                                 "-----END STATUSES TO IGNORE-----%1$s",
-                        System.lineSeparator()), null, Collections.singletonList(DiffField.builder().key("title").wiTypeId("assumption").build()), Arrays.asList("draft", "open")),
+                        System.lineSeparator()), null, Collections.singletonList(DiffField.builder().key("title").wiTypeId("assumption").build()), Arrays.asList("draft", "open"), List.of()),
                 Arguments.of(String.format("keep first duplicated entry" +
                                 "-----BEGIN BUNDLE TIMESTAMP-----%1$s" +
                                 "ts1%1$s" +
@@ -53,16 +56,23 @@ class DiffModelTest {
                                 "-----BEGIN STATUSES TO IGNORE-----%1$s" +
                                 "[\"draft\",\"open\"]%1$s" +
                                 "-----END STATUSES TO IGNORE-----%1$s" +
+                                "-----BEGIN HYPERLINK ROLES-----%1$s" +
+                                "[]%1$s" +
+                                "-----END HYPERLINK ROLES-----%1$s" +
                                 "-----BEGIN STATUSES TO IGNORE-----%1$s" +
                                 "[\"inprogress\"]%1$s" +
-                                "-----END STATUSES TO IGNORE-----%1$s",
-                        System.lineSeparator()), "ts1", Arrays.asList(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), Arrays.asList("draft", "open"))
+                                "-----END STATUSES TO IGNORE-----%1$s" +
+                                "-----BEGIN HYPERLINK ROLES-----%1$s" +
+                                "[\"ref_int\"]%1$s" +
+                                "-----END HYPERLINK ROLES-----%1$s",
+                        System.lineSeparator()), "ts1", Arrays.asList(DiffField.builder().key("status").build(), DiffField.builder().key("title").build()), Arrays.asList("draft", "open"), List.of())
         );
     }
 
     @ParameterizedTest
     @MethodSource("testValuesForCss")
-    void getProperExpectedResults(String locationContent, String expectedBundleTimestamp, List<DiffField> expectedFields, List<String> expectedStatusesToIgnore) {
+    void getProperExpectedResults(String locationContent, String expectedBundleTimestamp,
+                                  List<DiffField> expectedFields, List<String> expectedStatusesToIgnore, List<String> expectedHyperlinkRoles) {
 
         DiffModel model = new DiffModel();
         model.deserialize(locationContent);
@@ -70,5 +80,6 @@ class DiffModelTest {
         assertEquals(expectedBundleTimestamp, model.getBundleTimestamp());
         assertEquals(expectedFields, model.getDiffFields());
         assertEquals(expectedStatusesToIgnore, model.getStatusesToIgnore());
+        assertEquals(expectedHyperlinkRoles, model.getHyperlinkRoles());
     }
 }
